Jann 30/objects/RFA_GroupApprover__c.object
<CustomObject>
    <description>This stores the Approver users list</description>
    <fields>
        <fullName>Approver_Group_Description__c</fullName>
        <description>Approver Group Description</description>
        <label>Approver Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Group__c</fullName>
        <description>Approver Group</description>
        <label>Approver Group</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver Name</description>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFA_Approver_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <description>Approver Roles</description>
        <label>Approver Role</label>
        <picklist>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit name from Profit center</description>
        <formula>Profit_Center__r.Business_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>Profit_Center__r.GroupName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Operation__c</fullName>
        <description>Key Operation from Profit Center</description>
        <formula>Profit_Center__r.KeyOperationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Operation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>KEYOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr EXEC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Profit Center</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>RFA Approvers</relationshipLabel>
        <relationshipName>RFA_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RFA Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Profit_Center__c</columns>
        <columns>Approver_Role__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Sequence__c</columns>
        <columns>Approver_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>RFA Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFA Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RFA_ApproverName_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Approver_Name__c )</errorConditionFormula>
        <errorMessage>Please Enter Approver Name</errorMessage>
    </validationRules>
</CustomObject>